--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 			<p>...</p>
 			<div class="galeria">
 			<div class="integrante">
-				<img src="imagen/perfil1.webp" alt="Imagen de integrante Nombre y Apellido">
-				<div class="nombre">Nombre Apellido</div>
+				<img src="imagen/pato.jpg" alt="Imagen de integrante Nombre y Apellido">
+				<div class="nombre">Gallego Natalia</div>
 				<div class="descripcion">Descripción de funcion en el grupo.</div>
 			</div>
 			<div class="integrante">
