hice un cambio de imagen y el nombre

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
 				<div class="descripcion">Descripción de funcion en el grupo.</div>
 			</div>
 			<div class="integrante">
-				<img src="imagen/perfil1.webp" alt="Imagen de integrante Nombre y Apellido">
-				<div class="nombre">Nombre Apellido</div>
+				<img src="imagen/romina.jpg"alt="Imagen de integrante Nombre y Apellido">
+				<div class="nombre">Romina Mamani</div>
 				<div class="descripcion">Descripción de funcion en el grupo.</div>
 
 			</div>
